plugins {
    id 'java'
    id 'jacoco'
    id 'application'
    id 'groovy'
    id 'org.openjfx.javafxplugin' version '0.0.13'
}

group = 'nsu.kochanov'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

javafx {
    version = "17"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.media' ]
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    implementation 'org.codehaus.groovy:groovy-all:3.0.19'
    implementation 'com.google.googlejavaformat:google-java-format:1.19.2'
    implementation 'org.jsoup:jsoup:1.17.2'
    implementation 'com.github.javaparser:javaparser-core:3.25.5'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'org.apiguardian:apiguardian-api:1.1.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.1'
    implementation 'org.junit.platform:junit-platform-launcher:1.10.1'
    testImplementation 'org.junit.platform:junit-platform-console:1.10.1'
}

test {
    useJUnitPlatform()
    jvmArgs += [
            '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED'
    ]
}

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
        }
        resources {
            srcDirs = ['src/main/resources']
        }
    }
}

jacocoTestReport {
    reports {
        xml.required = true
    }
}

application {
    mainModule = 'nsu.kochanov' // имя модуля из module-info.java
    mainClass = 'nsu.kochanov.Main'
}

// Добавляем экспорт jdk.compiler для google-java-format
tasks.withType(JavaExec).configureEach {
    jvmArgs += [
            '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED'
    ]
}